# vid-chopper

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CODING_STYLE.md  LICENSE  README.md  VIDCHOPPER_TEAM_KNOWLEDGE_BASE.md  codex-handoff-log-2026-06-28.md  features_plan.md  vcpkg.json
.devin/skills/: README.md
.devin/skills/qt-cpp-docs/: README.md  SKILL.md
.devin/skills/qt-cpp-review/: README.md  SKILL.md
.devin/skills/qt-project/: README.md  SKILL.md
.github/: size-t-style-trigger
.github/workflows/: apply-size-t-style.yml  ci.yml  format-size-t-style.yml  pages.yml  release.yml
docs/: cli-config-schema.md  cli-settings.md  index.html  package-lock.json  package.json  styles.css  vite.config.ts
docs/schemas/: chapter-config.schema.json
docs/src/: App.tsx  styles.css
docs/src/components/: desktop-frame.tsx  section-heading.tsx  shell.tsx
docs/src/content/: site.ts
docs/src/pages/: docs-page.tsx  features-page.tsx  home-page.tsx  release-page.tsx
examples/: chapter-config.json  chapter-config.yaml
examples/invalid/: chapter-config-invalid-order.yaml  chapter-config-missing-chapters.json
knowledge/: README.md
knowledge/architecture/: repo-map.md
knowledge/coding-style/: core-and-qt-boundary.md  overview.md  testing-and-quality-gates.md
knowledge/history/: features-and-progress.md
knowledge/operations/: agent-workflow.md  pages-rewrite-brief.md  publishing-and-workflows.md
knowledge/skills/: installed-skills-and-plugins.md
packaging/windows/: README.txt  THIRD_PARTY_NOTICES.txt
resources/: app_icon.qrc
src/cli/: chapter_config.cpp  chapter_config.h  chapter_config.hpp  cli_app.cpp  cli_app.h  cli_app.hpp  cli_arguments.cpp  cli_arguments.h  cli_arguments.hpp  cli_settings.cpp  cli_settings.h  cli_settings.hpp  main.cpp
src/core/: chapter_plan.cpp  chapter_plan.h  chapter_plan.hpp  command_builder.cpp  command_builder.h  command_builder.hpp  enum_utils.hpp  models.h  models.hpp  string_utils.cpp  string_utils.h  string_utils.hpp  timecode.cpp  timecode.h  timecode.hpp  types.h  types.hpp
src/qt/: app_settings.cpp  app_settings.h  app_settings.hpp  dark_palette.cpp  dark_palette.h  demo_launch_options.hpp  logging.hpp  main.cpp
src/qt/services/: export_coordinator.cpp  export_coordinator.h  export_coordinator.hpp  ffprobe_service.cpp  ffprobe_service.h  ffprobe_service.hpp  gpu_detector.cpp  gpu_detector.h  gpu_detector.hpp
src/qt/ui/: advanced_settings_dialog.cpp  advanced_settings_dialog.h  advanced_settings_dialog.hpp  chapter_table_model.cpp  chapter_table_model.h  chapter_table_model.hpp  main_window.cpp  main_window.h  main_window.hpp
tests/: test_chapter_config.cpp  test_chapter_plan.cpp  test_chapter_plan_extended.cpp  test_chapter_plan_golden.cpp  test_cli_arguments.cpp  test_cli_contract.cpp  test_cli_settings.cpp  test_command_builder.cpp  test_command_builder_extended.cpp  test_command_builder_golden.cpp  test_demo_launch_options.cpp  test_enum_clamp.cpp  test_ffmpeg_integration.cpp  test_format_parse_golden.cpp  test_models.cpp  test_string_utils.cpp  test_string_utils_extended.cpp  test_support.h  test_timecode.cpp  test_timecode_extended.cpp
tests/dummy/: dummy_cli_data.h  dummy_cli_data.hpp
tests/dummy/mock_data/: README.md  VidChopper.ini  VidChopperCLI.ini  duplicate_stem.json  duplicate_stem.yaml  mock_ffprobe_embedded_chapters.json  mock_stream.json  mock_stream.mkv  mock_stream.yaml
tmp/pdfs/: cpp20_usage_report.html  generate_cpp20_usage_report.py
tmp/pdfs/chrome-profile/: Local State
tmp/pdfs/chrome-profile/Crashpad/: metadata
tmp/pdfs/chrome-profile/Crashpad/reports/: 1fa28e5d-ef5b-407e-8c39-021ecba49069.dmp
tmp/pdfs/chrome-profile/Default/: Network Action Predictor-journal  Web Data  Web Data-journal  heavy_ad_intervention_opt_out.db-journal
tmp/pdfs/chrome-profile/Default/Cache/Cache_Data/: data_0  data_1  index
tmp/pdfs/chrome-profile/Default/Code Cache/js/index-dir/: the-real-index
tmp/pdfs/chrome-profile/Default/Code Cache/wasm/index-dir/: the-real-index
tmp/pdfs/chrome-profile/Default/DawnGraphiteCache/: index
tmp/pdfs/chrome-profile/Default/DawnWebGPUCache/: index
tmp/pdfs/chrome-profile/Default/Extension Rules/: LOG
tmp/pdfs/chrome-profile/Default/Extension Scripts/: LOG
tmp/pdfs/chrome-profile/Default/Extension State/: LOG
tmp/pdfs/chrome-profile/Default/GPUCache/: index
tmp/pdfs/chrome-profile/Default/Service Worker/Database/: LOG
tmp/pdfs/chrome-profile/Default/Shared Dictionary/cache/index-dir/: the-real-index
tmp/pdfs/chrome-profile/Default/Site Characteristics Database/: LOG
tmp/pdfs/chrome-profile/Default/Sync Data/LevelDB/: LOG
tmp/pdfs/chrome-profile/Default/WebStorage/: QuotaManager  QuotaManager-journal
tmp/pdfs/chrome-profile/Default/shared_proto_db/: LOG
tmp/pdfs/chrome-profile/Default/shared_proto_db/metadata/: LOG
tmp/pdfs/chrome-profile/ShaderCache/: index
tmp/pdfs/edge-profile/: Local State
tmp/pdfs/edge-profile/Crashpad/: metadata  watson_metadata
tmp/pdfs/edge-profile/Crashpad/reports/: ea4547e5-01ec-4fce-b145-59f18c9e007e.dmp
tmp/pdfs/edge-profile/Default/: Affiliation Database-journal  ExtensionActivityEdge-journal  HubApps Icons  Top Sites-journal  load_statistics.db-journal
tmp/pdfs/edge-profile/Default/Cache/Cache_Data/: index
tmp/pdfs/edge-profile/Default/Code Cache/js/index-dir/: the-real-index
tmp/pdfs/edge-profile/Default/Code Cache/wasm/index-dir/: the-real-index
tmp/pdfs/edge-profile/Default/EdgeEDrop/: EdgeEDropSQLite.db-journal
tmp/pdfs/edge-profile/Default/Extension Rules/: LOG
tmp/pdfs/edge-profile/Default/Extension Scripts/: LOG
tmp/pdfs/edge-profile/Default/GPUCache/: index
tmp/pdfs/edge-profile/Default/Nurturing/: campaign_history-journal
tmp/pdfs/edge-profile/Default/Site Characteristics Database/: LOG
tmp/pdfs/edge-profile/Default/Sync Data/LevelDB/: LOG
tmp/pdfs/edge-profile/Default/WebStorage/: QuotaManager-journal
tmp/pdfs/edge-profile/Default/shared_proto_db/metadata/: LOG
tools/: capture-demo-assets.ps1  demo-capture-manifest.json
(+3 files in other folders)
